fixed an alignment bug for phone

--- a/style.scss
+++ b/style.scss
@@ -418,14 +418,14 @@ footer {
             text-align: center;
             .map-link {
                 img {
-                    width: 250px;
+                    width: 300px;
                     border-radius: 5px;
                     border: 5px solid $vlblue;
                 }
             }
 
             .social-links-container {
-                width: 250px;
+                width: 300px;
                 margin: 20px auto;
 
                 display: flex;
@@ -438,14 +438,14 @@ footer {
 
             .details {
                 p {
-                    width: 250px;
+                    width: 300px;
                     margin: 0px auto 20px auto;
                     text-align: center;
                 }
 
                 div {
                     display: flex;
-                    width: 250px;
+                    width: 300px;
                     margin: auto;
                     justify-content: space-between;
                 }
